# wechat-copilot

./: README.md  pyproject.toml
src/: main.py
src/accessibility/: util.py  wechat_reader.py
src/ai/: gpt_client.py
src/config/: settings.py
src/hotkey/: shortcut_manager.py
src/ui/: suggestion_window.py
wechat_copilot/ai/: gpt_client.py
wechat_copilot/config/: settings.py
wechat_copilot/ui/: suggestion_window.py
